Fix capital transfer API url